@@ -345,7 +345,7 @@
     % rotate_left(U, D) = N:
     %
     % N is the value obtained by rotating the binary representation of U
-    % left by D bits. Throws an exception if D is not in [0, 31].
+    % left by D bits. Throws an exception if D is not in the range [0, 31].
     %
 :- func rotate_left(uint32, uint) = uint32.
 
@@ -359,7 +359,7 @@
     % rotate_right(U, D) = N:
     %
     % N is the value obtained by rotating the binary representation of U
-    % right by D bits. Throws an exception if D is not in [0, 31].
+    % right by D bits. Throws an exception if D is not in the range [0, 31].
     %
 :- func rotate_right(uint32, uint) = uint32.
 
@@ -369,6 +369,66 @@
     % right by an amount given by the lowest 5 bits of D.
     %
 :- func unchecked_rotate_right(uint32, uint) = uint32.
+
+    % set_bit(U, I) = N:
+    % N is the value obtained by setting the I'th bit (the bit worth 2^I) of U
+    % to one. An exception is thrown if I is not in the range [0, 31].
+    %
+:- func set_bit(uint32, uint) = uint32.
+
+    % unchecked_set_bit(U, I) = N:
+    % As above, but the behaviour is undefined if I is not in the range
+    % [0, 31].
+    %
+:- func unchecked_set_bit(uint32, uint) = uint32.
+
+    % clear_bit(U, I) = N:
+    % N is the value obtained by setting the I'th bit (the bit worth 2^I) of U
+    % to zero. An exception is thrown if I is not in the range [0, 31].
+    %
+:- func clear_bit(uint32, uint) = uint32.
+
+    % unchecked_clear_bit(U, I) = N:
+    % As above, but the behaviour is undefined if I is not in the range
+    % [0, 31].
+    %
+:- func unchecked_clear_bit(uint32, uint) = uint32.
+
+    % flip_bit(U, I) = N:
+    % N is the value obtained by flipping the I'th bit (the bit worth 2^I) of
+    % U. An exception is thrown if I is not in the range [0, 31].
+    %
+:- func flip_bit(uint32, uint) = uint32.
+
+    % unchecked_flip_bit(U, I) = N:
+    % As above, but the behaviour is undefined if I is not in the range
+    % [0, 31].
+    %
+:- func unchecked_flip_bit(uint32, uint) = uint32.
+
+    % bit_is_set(U, I):
+    % True iff the I'th bit (the bit worth 2^I) of U is one.
+    % An exception is thrown if I is not in the range [0, 31].
+    %
+:- pred bit_is_set(uint32::in, uint::in) is semidet.
+
+    % unchecked_bit_is_set(U, I):
+    % As above, but the behaviour is undefined if I is not in the range
+    % [0, 31].
+    %
+:- pred unchecked_bit_is_set(uint32::in, uint::in) is semidet.
+
+    % bit_is_clear(U, I):
+    % True iff the I'th bit (the bit worth 2^I) of U is zero.
+    % An exception is thrown if I is not in the range [0, 31].
+    %
+:- pred bit_is_clear(uint32::in, uint::in) is semidet.
+
+    % unchecked_bit_is_clear(U, I):
+    % As above, but the behaviour is undefined if I is not in the range
+    % [0, 31].
+    %
+:- pred unchecked_bit_is_clear(uint32::in, uint::in) is semidet.
 
 %---------------------------------------------------------------------------%
 %
@@ -968,6 +1028,58 @@ rotate_right(X, N) =
 "
     Result = java.lang.Integer.rotateRight(X, N);
 ").
+
+%---------------------------------------------------------------------------%
+
+set_bit(U, I) =
+    ( if I < 32u then
+        unchecked_set_bit(U, I)
+    else
+        func_error($pred, "bit index exceeds 31 bits")
+    ).
+
+unchecked_set_bit(U, I) =
+    U \/ (1u32 `unchecked_left_shift` cast_to_int(I)).
+
+clear_bit(U, I) =
+    ( if I < 32u then
+        unchecked_clear_bit(U, I)
+    else
+        func_error($pred, "bit index exceeds 31 bits")
+    ).
+
+unchecked_clear_bit(U, I) =
+    U /\ (\ (1u32 `unchecked_left_shift` cast_to_int(I))).
+
+flip_bit(U, I) =
+    ( if I < 32u then
+        unchecked_flip_bit(U, I)
+    else
+        func_error($pred, "bit index exceeds 31 bits")
+    ).
+
+unchecked_flip_bit(U, I) =
+    U `xor` (1u32 `unchecked_left_shift` cast_to_int(I)).
+
+bit_is_set(U, I) :-
+    ( if I < 32u then
+        unchecked_bit_is_set(U, I)
+    else
+        error($pred, "bit index exceeds 31 bits")
+    ).
+
+unchecked_bit_is_set(U, I) :-
+    U /\ (1u32 `unchecked_left_shift` cast_to_int(I)) \= 0u32.
+
+bit_is_clear(U, I) :-
+    ( if I < 32u then
+        unchecked_bit_is_clear(U, I)
+    else
+        error($pred, "bit index exceeds 31 bits")
+    ).
+
+unchecked_bit_is_clear(U, I) :-
+    U /\ (1u32 `unchecked_left_shift` cast_to_int(I)) = 0u32.
 
 %---------------------------------------------------------------------------%
 
