@@ -746,6 +746,7 @@ ifeq "$(findstring profdeep,$(GRADE))" ""
 		arith_uint32 \
 		arith_uint64 \
 		arith_uint8 \
+		bit_access_uint32 \
 		bitmap_bytes \
 		bitmap_empty \
 		bitmap_test \
